// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders a themed PageHeader component 1`] = `
<PageSFC
  className="sc-bdVaJa kyKWdW"
  theme={[ThemeObject]}
>
  <div>
    Some text here
  </div>
</PageSFC>
`;

exports[`Page renders a themed PageHeader component 2`] = `
<div
  className="sc-bdVaJa kyKWdW"
>
  <div>
    Some text here
  </div>
</div>
`;
